[package]
name = "milena"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "zstd"] }
anyhow = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
base64 = "0.21.5"
serde_json = "1.0"
serde = "1.0"
prost = "0.12"
prost-types = "0.12"
prost-reflect = { version = "0.12.0", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive", "string"] }
bytes = "1.5.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.30"
axum = { version = "0.7.5", features = ["http2"] }
axum-streams = { version = "0.15.0", features = ["json", "text"] }
tokio-stream = { version = "0.1.15" }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.11", features = ["codec", "io"] }
async-stream = "0.3.5"
axum-extra = { version = "0.9.3", features = ["query"] }
